WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284234
Unreviewed Catalyst build fix after
287495@main
https://bugs.webkit.org/show_bug.cgi?id=284234
Summary
Unreviewed Catalyst build fix after 287495@main
Chris Dumez
Reported
2024-12-07 12:34:12 PST
Catalyst build fix after
287495@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-12-07 12:34:13 PST
<
rdar://problem/141095828
>
Chris Dumez
Comment 2
2024-12-07 12:35:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37599
EWS
Comment 3
2024-12-07 13:23:22 PST
Committed
287508@main
(e9f48e4ffbe6): <
https://commits.webkit.org/287508@main
> Reviewed commits have been landed. Closing PR #37599 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug