Unreviewed Catalyst build fix after 287495@main https://bugs.webkit.org/show_bug.cgi?id=284234 rdar://141095828

* Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:

Canonical link: https://commits.webkit.org/287508@main